# MoveoROS

./: .gitignore  .gitmodules  .mxproject  CMakeLists.txt  MoveoRos.ioc  STM32F446XX_FLASH.ld  readme.md
Core/Inc/: main.h  pin_config.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h  timer_config.h
Core/Src/: freertos.c  gpio.c  main.c  stm32f4xx_it.c  tim.c
lib/arduino_compat/: Arduino.cpp  Arduino.h  CMakeLists.txt  SPI.h  Stream.cpp  Stream.h  pin_mapping.c  pin_mapping.h  software_uart.cpp  software_uart.h  timer.c  timer.h
